--- a/style.css
+++ b/style.css
@@ -27,3 +27,58 @@
     font-size: 6em;
     padding: .5em .8em;
 }
+
+.color-switcher{
+    position: fixed;
+    top: 25px; right:-200px;
+    width: 200px;
+    padding: 10px;
+    background-color: #fff;
+    z-index: 100;
+}
+.color-switcher.active{
+    right: 0;
+}
+
+.color-switcher h3{
+    color: var(--main-color);
+    font-size: 20px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #333;
+    padding: 5px 0;
+    text-align: center;
+}
+
+.color-switcher .switcher-btn{
+    position: absolute;
+    top: 0; left: -75px;
+    color: var(--main-color);
+    background: #fff;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 35px;
+}
+.color-switcher .switcher-btn i{
+    animation: rotate 4s linear infinite;
+}
+
+@keyframes rotate{
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+.color-switcher .theme-button-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.color-switcher .theme-button-container .theme-buttons{
+    display: block;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    margin: 5px;
+    cursor: pointer;
+}
